feat(app): the owner makes a customer type
